--- a/data-fetch/env.example
+++ b/data-fetch/env.example
@@ -12,10 +12,23 @@ COINGECKO_USE_PRO=false
 COINDESK_API_KEY=your-coindesk-key-here
 # Legacy CryptoCompare API key (deprecated, use COINDESK_API_KEY)
 CRYPTOCOMPARE_API_KEY=your-cryptocompare-key-here
+# Alpha Vantage API key (free tier: 5 calls/minute, 500/day)
+ALPHA_VANTAGE_API_KEY=your-alpha-vantage-key-here
 
 # Optional - Custom user agent for scraping
 USER_AGENT=DataFetchBot/1.0 (Educational purposes)
 
 # Optional - Logging level (DEBUG, INFO, WARNING, ERROR)
 LOG_LEVEL=INFO
+
+# Optional - Authentication and session management
+COOKIE_STORAGE_PATH=~/.data-fetch/cookies
+SESSION_TIMEOUT=3600
+AUTH_RETRY_ATTEMPTS=2
+
+# Optional - Proxy server (e.g., http://proxy.example.com:8080)
+PROXY_SERVER=
+
+# Optional - Stealth mode (true/false)
+USE_STEALTH_MODE=true
 
