Migrate deployment from Replit to Railway with Docker
Remove Replit-specific files and configuration, add Dockerfile and Railway deployment files for Playwright support. Update README and code to reference Railway and Docker-based deployment, improve error handling and retry logic in scrapers, and optimize browser/stealth utilities for Railway environments.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 # Browser automation (for dynamic pages)
 playwright>=1.40.0
 # Note: After installing, run: playwright install chromium
-# For Streamlit Cloud, browsers are installed during deployment
+# For Railway/Docker, browsers are installed during Docker build via Dockerfile
 
 # Data manipulation
 pandas>=2.0.0
