Add Fintech News tab with RSS feed aggregation
Introduces a new 'Fintech News' tab to the app, loading news sources from a YAML config and aggregating headlines from multiple RSS feeds using a new RSSClient. Adds article extraction and DOCX export for the URL Scraper tab, including a new ArticleExtractor class and related API methods. Updates requirements.txt to include feedparser and python-docx dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,12 @@ plotly>=5.18.0
 # Note: Latest available version on PyPI is 1.10.0 (as of Dec 2025)
 dune-client>=1.0.0
 
+# RSS feed parsing (for Fintech News tab)
+feedparser>=6.0.0
+
+# DOCX export (for URL Scraper tab)
+python-docx>=1.0.0
+
 # Note: playwright-stealth is optional and can be installed separately
 # if needed: pip install playwright-stealth
 
