--- a/config/websites.yaml
+++ b/config/websites.yaml
@@ -5,6 +5,7 @@ sites:
   # The Block - BTC and ETH Total Exchange Volume (7DMA)
   - id: theblock_btc_eth_volume_7dma
     name: "The Block - BTC/ETH Exchange Volume 7DMA"
+    asset: "both"
     base_url: "https://www.theblock.co"
     page_url: "https://www.theblock.co/data/crypto-markets/spot/btc-and-eth-total-exchange-volume-7dma"
     extraction_strategy: "api_json"
@@ -32,6 +33,7 @@ sites:
   # CoinGecko - Exchange Volume (Public API)
   - id: coingecko_exchange_volume
     name: "CoinGecko - Exchange Volume"
+    asset: "general"
     base_url: "https://api.coingecko.com"
     page_url: "https://www.coingecko.com/en/exchanges"
     extraction_strategy: "api_json"
@@ -60,6 +62,7 @@ sites:
   # CoinGecko - BTC Market Chart (Historical Data)
   - id: coingecko_btc_market_chart
     name: "CoinGecko - BTC Market Chart"
+    asset: "bitcoin"
     base_url: "https://api.coingecko.com"
     page_url: "https://www.coingecko.com/en/coins/bitcoin"
     extraction_strategy: "api_json"
@@ -88,6 +91,7 @@ sites:
   # Legacy CryptoCompare - Daily Exchange Volume (deprecated, use CoinDesk)
   - id: cryptocompare_exchange_volume
     name: "CryptoCompare - Daily Exchange Volume (Legacy)"
+    asset: "general"
     base_url: "https://min-api.cryptocompare.com"
     page_url: "https://min-api.cryptocompare.com/data/exchange/histoday"
     extraction_strategy: "api_json"
@@ -175,6 +179,7 @@ sites:
   # CoinGlass - BTC Overview (Browser-based extraction)
   - id: coinglass_btc_overview
     name: "CoinGlass - BTC Overview"
+    asset: "bitcoin"
     base_url: "https://www.coinglass.com"
     page_url: "https://www.coinglass.com/currencies/BTC"
     extraction_strategy: "dom_js_extraction"
@@ -202,6 +207,7 @@ sites:
   # CoinGlass - Spot Inflow/Outflow (Browser-based extraction)
   - id: coinglass_spot_flows
     name: "CoinGlass - Spot Inflow/Outflow"
+    asset: "general"
     base_url: "https://www.coinglass.com"
     page_url: "https://www.coinglass.com/currencies/BTC"
     extraction_strategy: "dom_js_extraction"
@@ -229,6 +235,7 @@ sites:
   # CoinGlass - Volatility Metrics (Browser-based extraction)
   - id: coinglass_volatility
     name: "CoinGlass - Volatility Metrics"
+    asset: "general"
     base_url: "https://www.coinglass.com"
     page_url: "https://www.coinglass.com/volatility"
     extraction_strategy: "dom_js_extraction"
@@ -256,6 +263,7 @@ sites:
   # Dune Analytics - ETH Staking: Total ETH Deposited
   - id: dune_eth_staking_total_deposited
     name: "Dune - ETH Staking: Total ETH Deposited"
+    asset: "ethereum"
     base_url: "https://dune.com"
     page_url: "https://dune.com/queries/2361452"
     extraction_strategy: "api_json"
@@ -289,6 +297,7 @@ sites:
   # Dune Analytics - ETH Staking: Validators and Depositors
   - id: dune_eth_staking_validators_depositors
     name: "Dune - ETH Staking: Validators & Depositors"
+    asset: "ethereum"
     base_url: "https://dune.com"
     page_url: "https://dune.com/queries/2361448"
     extraction_strategy: "api_json"
@@ -323,6 +332,7 @@ sites:
   # Dune Analytics - ETH Staking Statistics (Combined - uses both queries)
   - id: dune_eth_staking
     name: "Dune - ETH Staking Statistics (Combined)"
+    asset: "ethereum"
     base_url: "https://dune.com"
     page_url: "https://dune.com/underfire/eth-staking-statistics"
     extraction_strategy: "api_json"
@@ -672,6 +682,7 @@ sites:
   # The Block - Exchange Volume (Browser-based with API fallback)
   - id: theblock_exchange_volume
     name: "The Block - BTC, ETH & SOL Combined (TOTAL3)"
+    asset: "both"
     base_url: "https://www.theblock.co"
     page_url: "https://www.theblock.co/data/crypto-markets/spot/total-exchange-volume-daily"
     extraction_strategy: "api_json"
@@ -705,6 +716,7 @@ sites:
   # Bitcoin.com - Derivatives Snapshot (Uses CoinGlass data)
   - id: bitcoin_com_derivatives_snapshot
     name: "CoinGlass - Derivatives Snapshot (BTC)"
+    asset: "bitcoin"
     base_url: "https://www.coinglass.com"
     page_url: "https://www.coinglass.com/currencies/BTC"
     extraction_strategy: "dom_js_extraction"
@@ -732,6 +744,7 @@ sites:
   # CoinGlass - Liquidations (replaces Invezz)
   - id: invezz_liquidations
     name: "CoinGlass - Liquidations"
+    asset: "general"
     base_url: "https://www.coinglass.com"
     page_url: "https://www.coinglass.com/LiquidationData"
     extraction_strategy: "dom_js_extraction"
